@@ -1,5 +1,6 @@
 2009-11-28  Torbjorn Granlund  <tege@gmplib.org>
 
+	* Use TMP_ALLOC_LIMBS consistently.
 	* Finish renaming BITS_PER_MP_LIMB to GMP_LIMB_BITS.
 
 	* macos: Remove entire directory.
